The program itself works, only a few additional functions do not work! *Line break doesn't work

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"text": "Hello World!", "message": "Good Day!", "time": 0}
+{"text": "Hello World!", "message": "Good day!", "time": 1, "wordwrap": true}
